add jvmArgs to the runIde task